# OpenCCU-Base

./: CMakeLists.txt  CMakePresets.json  Makefile
src/crypttool/: CMakeLists.txt  crypttool.cpp  crypttoolconfig.cpp  crypttoolconfig.h
src/eq3configcmd/: CMakeLists.txt  Makefile  eq3configcmd.cpp
src/eq3configd/: CMakeLists.txt
src/hs485d/: CMakeLists.txt  HMWLGWCommand.cpp  HMWLGWTransportFrame.cpp  HS485Central.h  HS485Controller.cpp  HS485ControllerCCU1.cpp  HS485Device.cpp  HS485Device.h  HS485Manager.cpp  HS485Manager.h  HS485PhysicalDataInterfaceCentralCommand.cpp  Makefile  hs485d.cpp
src/hs485dLoader/: CMakeLists.txt  Makefile  hs485dLoader.cpp
src/hss_led/: AlarmMessage.cpp  AlarmMessage.h  CMakeLists.txt  Info.cpp  Info.h  InfoLed.cpp  InfoLed.h  InternetLed.cpp  InternetLed.h  MessageParser.cpp  MessageParser.h  Network.cpp  Network.h  RFLGWInfoLED.cpp  RFLGWInfoLED.h  ServiceMessage.cpp  ServiceMessage.h  UdpCannel.cpp  UdpCannel.h  UpdateAvailable.cpp  UpdateAvailable.h  defines.h  hss_led.cpp  hss_led_util.cpp  hss_led_util.h  led.cpp  led.h
src/libLanDeviceUtils/: CMakeLists.txt  Makefile
src/libLanDeviceUtils/include/: DLLImportExport.h  IPConfiguration.h  LanDevice.h  LanDeviceUtils.h  LanDeviceUtilsTypes.h  RuntimeIPConfiguration.h  TCPEncryption.h  TestStatusConfiguration.h  UtilityDeviceConfiguration.h
src/libLanDeviceUtils/src/: Constants.cpp  Constants.h  EQ3ConfigProtocol.cpp  EQ3ConfigProtocol.h  IPConfiguration.cpp  InternalUtilities.h  LanDevice.cpp  LanDeviceUtils.cpp  LanifCfgProtocol.cpp  LanifCfgProtocol.h  NetworkInterfaceHelper.cpp  NetworkInterfaceHelper.h  Protocol.cpp  Protocol.h  RuntimeIPConfiguration.cpp  TCPEncryption.cpp  TestStatusConfiguration.cpp  UDPDatagramSender.cpp  UDPDatagramSender.h  UtilityDeviceConfiguration.cpp  UtilityFirmwareUpdate.cpp  UtilityFirmwareUpdate.h  UtilityNetworkConfiguration.cpp  UtilityNetworkConfiguration.h  UtilitySearchDevices.cpp  UtilitySearchDevices.h  UtilitySendCommand.cpp  UtilitySendCommand.h
src/libUnifiedLanComm/: .gitignore  CMakeLists.txt  Makefile
src/libUnifiedLanComm/include/: DLLImportExportULC.h  LanConnection.h  LanConnectionListener.h  UnifiedLanComm.h  UnifiedLanCommController.h
src/libUnifiedLanComm/src/: CommonConversion.cpp  CommonConversion.h  LanConnection.cpp  LanConnectionListener.cpp  UnifiedLanCommController.cpp  UnifiedLanProtocolMessage.cpp  UnifiedLanProtocolMessage.h  UnifiedLanProtocolTypeConverter.cpp  UnifiedLanProtocolTypeConverter.h
src/libUnifiedLanComm/test/: Makefile  runTestUnifiedLanComm.sh
src/libUnifiedLanComm/test/src/: TestCommonConversion.h  TestSuiteUnifiedLanComm.cpp  TestUnifiedLanProtocolTypeConverter.h
src/libXmlRpc/: CMakeLists.txt  Makefile  xmlrpc.vc9.vcproj
src/libXmlRpc/src/: XmlRpcClient.cpp  XmlRpcValue.cpp
src/libelvutils/: CMakeLists.txt
src/libeq3config/: CMakeLists.txt  Commands.cpp
src/libhsscomm/: CMakeLists.txt
src/libxmlparser/: CMakeLists.txt  Makefile  xmlParser.cpp  xmlparser.vc9.vcproj  xmlparser.vc9_buildserver.vcproj
src/multimacd/: .gitignore  CMakeLists.txt  Makefile
src/tclrega/: CMakeLists.txt  tclrega.cpp
src/tclrpc/: CMakeLists.txt  Makefile  tclrpc.cpp
src/tclticks/: CMakeLists.txt
src/webui/: CMakeLists.txt  Makefile
src/webui/CfgTool/: admin.js  cgi.tcl  header.htm  index.htm  serviceMessages.cgi  session.tcl  user.tcl
src/webui/CfgTool/config/: popupInterfaceEditor.cgi  popupTransEditor.cgi
src/webui/CfgTool/configapp/: configfile.tcl  cp_add_device.cgi  cp_settings.cgi  deviceLoader.cgi  devices.cgi  metadata.cgi
src/webui/design/: Bedienbuttons.psd  HomeMatic_Icons.xcf  Neue Bilddaten WebUI.7z  ajaxload.xcf  big_uncertain.psd  btn_fav_up.psd  btns_gray.psd  button.xcf  button_Vorlage_1.psd  button_Vorlage_2.psd  dots.xcf  hm-logo.psd  loading.psd  percentinput.psd  slider_bg.psd  slider_bg_old.psd  smallbuttons.psd  weitere.7z
src/webui/design/farbschema/: HomeMatic Farbtabelle.doc  Master Farbuebersicht Web UI.doc
src/webui/design/old/: HomeMatic_Icons.xcf
src/webui/design/pda/: hm_webui_pda.doc  hm_webui_pda_design.doc
src/webui/documentation/js/jsdoc-toolkit/: createdocu.tcl  jsdoc.conf
src/webui/rega/www/: index.htm  logout.htm
src/webui/rega/www/esp/: datapointconfigurator.fn  functions.fn  side.inc
src/webui/rega/www/pages/: index.htm
src/webui/scripts/: CMakeLists.txt  Makefile  libfirewall.tcl  setfirewall.tcl
src/webui/www/config/: stringtable_de.txt
src/webui/www_source/: .gitignore  CMakeLists.txt  Makefile  check_CheckOnlyFiles.tcl  create_devdb_tcl.tcl  create_devdescr_js.tcl  create_resource_js.tcl  create_st_value_js.tcl  create_style_css.tcl  create_webui_js.tcl  cssfiles.txt  jsCheckOnlyFiles.txt  jsfiles.txt  jsl.conf  resources.txt  utf82ansi.py
src/webui/www_source/CfgTool/: system.js
src/webui/www_source/config/css/: ic_deviceparameters.css  ic_linkpeerlist.css  ic_messagebox.css  ic_neweasymode.css  ic_selchannel.css  ic_setprofiles.css
src/webui/www_source/config/devdescr/: 100_hm-rc-8.tcl  101_hm-sen-db-pcb.tcl  102_hm-es-tx-wm.tcl  103_hm-sen-mdir-wm55.tcl  104_hm-sec-sd-2.tcl  104_hmip-swsd-2-nl.tcl  104_hmip-swsd-2.tcl  104_hmip-swsd.tcl  105_hm-sec-sd-2-team.tcl  106_hm-lc-sw1-dr.tcl  107_hm-es-pmsw1-pl-dn-r1.tcl  107_hm-es-pmsw1-pl-dn-r2.tcl  107_hm-es-pmsw1-pl-dn-r3.tcl  107_hm-es-pmsw1-pl-dn-r4.tcl  107_hm-es-pmsw1-pl-dn-r5.tcl  108_hm-rc-dis-h-x-eu.tcl  109_hm-lc-sw1-pl-ct-r1.tcl  110_hm-es-pmsw1-dr.tcl  111_hm-lc-rgbw-wm.tcl  112_hmip-wrc2-2.tcl  112_hmip-wrc2.tcl  112a_hmip-wrc2-a-2.tcl  112a_hmip-wrc2-a.tcl  112a_hmip-wrc2.tcl  112b_hmipw-wrc2-a.tcl  112b_hmipw-wrc2.tcl  113_hmip-pdt-a.tcl  113_hmip-pdt-ch.tcl  113_hmip-pdt-pe.tcl  113_hmip-pdt-uk.tcl  113_hmip-pdt.tcl  113_hmip-pmfs.tcl  113_hmip-ps-a.tcl  113_hmip-ps.tcl  113_hmip-psm-ch-2.tcl  113_hmip-psm-ch.tcl  113_hmip-psm-it.tcl  113_hmip-psm-pe-2.tcl  113_hmip-psm-pe.tcl  113_hmip-psm-uk.tcl  (+482 more)
src/webui/www_source/config/js/: cp_functions.js  ic_common.js  ic_configpendingmsg.js  ic_deviceparameters.js  ic_gd.js  ic_infomsgbox.js  ic_msgbox.js  (+8 more)
(+388 files in other folders)
